--- a/user/fav.html
+++ b/user/fav.html
@@ -37,7 +37,7 @@
 			</div>
 			<div class="btns">
 				<label class="b_btn" ng-click="card=false">关 闭</label>
-				<label class="b_btn blue" ng-click="card=false||delStar(s)"><i class="i_fav_h"></i> 取消</label>
+				<label class="b_btn bg_blue" ng-click="card=false||delStar(s)"><i class="i_fav_h"></i> 取消</label>
 			</div>
 		</div>
 	</div>
