--- a/user/info.html
+++ b/user/info.html
@@ -27,7 +27,7 @@
 				<select id="pid" class="txt" name="pid" ng-model="pid" ng-options="p.id as p.province_name for p in plist">
 				</select></li>
 		</ul>
-		<a href="javascript:" class="red b_btn"><button type="submit" ng-disabled="user.$invalid">提交修改</button></a>
+		<a href="javascript:" class="bg_red b_btn"><button type="submit" ng-disabled="user.$invalid">提交修改</button></a>
 	</form>
 	<div ng-show="errMsg" class="alert">
 		<div class="r_panel">
