--- a/class/item.html
+++ b/class/item.html
@@ -9,10 +9,12 @@
 <div ng-controller="item" class="ng-init" style="margin-bottom: 40px">
 	<div class="no_class" ng-if="!info.flist.length">
 		课程即将开始，请耐心等待……
-		<a href="<!--#echo var="wc1"-->class/list.html" class="b_btn red">查看其他班次</a>
+		<a href="<!--#echo var="wc1"-->class/list.html" class="b_btn bg_red">查看其他班次</a>
 	</div>
 	<div ng-if="info.flist.length">
-		<video ng-src="{{video}}" class="video" controls preload autoplay></video>
+		<div class="video" style="background-image:url({{info.imgurl}})">
+			<video ng-show="!post" ng-src="{{video}}" controls preload autoplay></video>
+		</div>
 		<!--#include virtual="/include/nav.html"-->
 		<div class="panel" ng-show="rt.type<3">
 			<h3 class="h3"><i class="i_video"></i>{{info.name}} <b class="fr red">￥{{info.cmoney}}</b></h3>
@@ -47,37 +49,39 @@
 						<label for="nickname" class="f_i">评分</label>
 						<div><i class="i_star" ng-repeat="i in stars" ng-click="$parent.star=i" ng-class="{'red':star>$index,'grayish':star<i}"></i></div></li>
 					<li class="li">
-						<textarea class="txt" name="comment" ng-model="comment" required placeholder="请输入评价内容"></textarea></li>
+						<textarea class="txt" name="comment" ng-model="$parent.comment" required placeholder="请输入评价内容"></textarea></li>
 					<li class="li red" ng-show="errMsg">{{errMsg}}</li>
 				</ul>
 				<div class="btns">
 					<label class="b_btn" ng-click="post=false">关 闭</label>
-					<label class="red b_btn"><button type="submit" ng-disabled="form.$invalid">发表评价</button></label>
+					<label class="bg_red b_btn"><button type="submit" ng-disabled="form.$invalid">发表评价</button></label>
 				</div>
 			</form>
 		</div>
-	</div>
-	<div class="fixed" ng-class="{'on':user.cs}">
-		<div class="btns">
-			<a href="<!--#echo var="wc1"-->user/car.html"><i class="i_car"></i>购物车</a>
-			<label class="bg_orange" ng-click="user.buy()">加入购物车</label>
-			<label class="bg_red" ng-click="user.buy(true)">立即购买</label>
+		<div class="fixed">
+			<div class="btns">
+				<a href="<!--#echo var="wc1"-->user/car.html"><i class="i_car"></i>购物车({{user.info.carcount||0}})</a>
+				<label class="bg_orange" ng-click="user.buy(rt.gid)">{{user.info.added?"已":""}}加入购物车</label>
+				<label class="bg_red" ng-click="showBuy=true">立即购买</label>
+			</div>
 		</div>
-		<div class="pinfo">
+		<dov class="fixed pinfo" ng-show="showBuy">
 			<div class="il">
 				<img ng-src="{{pinfo.imgurl}}">
 				<big><b>{{pinfo.name}}</b></big>
-				<span class="red">￥{{pinfo.cmoney}}</span>
+				<b class="red">￥{{price}}</b><span class="gray" ng-show="pinfo.check">（整套购买优惠￥{{pinfo.ymoney}}）</span>
+				<i class="i_cross" ng-click="showBuy=false"></i>
 			</div>
 			<div class="il">
 				<big>整套购买</big>
-				<label>{{pinfo.name}}</label>
+				<label ng-class="{'on':pinfo.check}" ng-click="check(pinfo,true)">{{pinfo.name}} - ￥{{pinfo.cmoney}}</label> <span class="gray">（优惠￥{{pinfo.ymoney}}）</span>
 			</div>
 			<div class="il">
 				<big>单科购买</big>
-				<label ng-repeat="p in pinfo.glist">{{p.name}}</label>
+				<label ng-repeat="p in pinfo.glist" ng-class="{'on':p.check}" ng-click="check(p)">{{p.name}} - ￥{{p.cmoney}}</label>
 			</div>
-		</div>
+			<label class="b_btn bg_red"><button ng-disabled="!buyid.length" ng-click="pay(buyid)">确认支付</button></label>
+		</dov>
 	</div>
 </div>
 <!--#include virtual="/include/footer.html"-->
