--- a/user/class.html
+++ b/user/class.html
@@ -8,19 +8,31 @@
 <!--#include virtual="/include/header.html"-->
 <div ng-controller="myclass" class="ng-init">
 	<!--#include virtual="/include/nav.html"-->
-	<div class="clist panel" ng-if="rt.type==nlist[0].type&&list.length">
-		<a class="li" ng-repeat="s in list" ng-href="<!--#echo var="wc1"-->class/class.html?mid={{s.major_id}}&cid={{s.course_id}}&gid={{s.id}}">
-			<img ng-src="{{s.imgurl}}">
-			{{s.name|slice:14}} <br>
-			<span class="gray">{{s.content|slice:18}}</span><br>
-			<span class="gray">{{s.vnums||0}}课时</span><b class="orange">￥{{s.cmoney}}</b>
-		</a>
+	<div ng-if="rt.type==nlist[0].type&&list.length">
+		<div class="dlist panel" ng-repeat="s in list">
+			<h3 class="h3"><i class="i_video"></i>{{s.name}}</h3>
+			<a class="li" ng-if="!s.glist" ng-href="<!--#echo var="wc1"-->class/class.html?mid={{s.major_id}}&cid={{s.course_id}}&gid={{s.id}}">
+				<img ng-src="{{s.imgurl}}">
+				{{s.name|slice:14}} <br>
+				<span class="gray">{{s.able?'已过期':'有效期至'}}：{{s.end_time}}</span><br>
+				<span class="gray">{{s.vnums||0}}课时</span>
+			</a>
+			<div ng-if="s.glist">
+				<a class="li" ng-repeat="g in s.glist" ng-href="<!--#echo var="wc1"-->class/class.html?mid={{g.major_id}}&cid={{g.course_id}}&gid={{g.id}}">
+					<img ng-src="{{g.imgurl}}">
+					{{g.name|slice:14}} <br>
+					<span class="gray">{{s.able?'已过期':'有效期至'}}：{{s.end_time}}</span><br>
+					<span class="gray">{{g.vnums||0}}课时</span>
+				</a>
+			</div>
+		</div>
 	</div>
+
 	<!--#include virtual="/include/pagination.html"-->
 	<div class="none gray" ng-show="!loading&&!list.length">
 		您目前还未报名参加任何课程<br>
 		现在您可以点击下方按钮
-		<a href="<!--#echo var="wc1"-->class/list.html" class="b_btn red">选购课程</a>
+		<a href="<!--#echo var="wc1"-->class/list.html" class="b_btn bg_red">选购课程</a>
 	</div>
 </div>
 <!--#include virtual="/include/footer.html"-->
