--- a/bind.html
+++ b/bind.html
@@ -8,12 +8,11 @@
 <div ng-controller="bind" class="ng-init">
 	<div class="panel content">
 		<p>绑定手机可以同步您的学习记录,多平台登录中科建安教育网，免费观看名师讲解，随时随地练习试题。</p>
-		<p>请先设定报考专业，科目，以便我们为您提供更精准的学习内容。</p>
 	</div>
 	<form class="form" ng-submit="sub()" name="user" autocomplete="off">
 		<ul class="panel">
 			<li class="li">
-				<label for="phone" class="f_i"><big class="red">*</big>手机</label>
+				<label for="phone" class="f_i"><big class="red">*</big>手&emsp;机</label>
 				<input id="phone" type="text" class="txt" ng-model="phone" name="phone" required vphone placeholder="请输入手机号码"></li>
 			<li class="li">
 				<label for="code" class="f_i"><big class="red">*</big>验证码</label>
