--- a/user/car.html
+++ b/user/car.html
@@ -12,7 +12,7 @@
 			<i class="i_check" ng-click="check(g)"></i>
 			<img ng-src="{{g.imgurl}}">
 			<p>{{g.name}}</p>
-			<p><b class="red">￥{{g.cmoney}}</b> <span class="gray">截至日期：{{g.etime}}</span></p>
+			<p><b class="red">￥{{g.cmoney}}</b></p>
 			<i class="i_trash" ng-click="g.del=true"></i>
 			<div>
 				<label class="bg_red" ng-click="del(g,$index)">删除</label>
