--- a/bind.html
+++ b/bind.html
@@ -12,12 +12,16 @@
 	<form class="form" ng-submit="sub()" name="user" autocomplete="off">
 		<ul class="panel">
 			<li class="li">
-				<label for="phone" class="f_i"><big class="red">*</big>手&emsp;机</label>
+				<label for="phone" class="f_i"><big class="red">*</big>手&ensp;机&ensp;号</label>
 				<input id="phone" type="text" class="txt" ng-model="phone" name="phone" required vphone placeholder="请输入手机号码"></li>
 			<li class="li">
-				<label for="code" class="f_i"><big class="red">*</big>验证码</label>
+				<label for="code" class="f_i"><big class="red">*</big>图片验证</label>
+				<input id="imgcode" maxlength="4" minlength="4" type="text" class="txt" ng-model="imgcode" name="imgcode" required placeholder="请输入图片验证码">
+				<label title="点击刷新验证码" ng-click="ran()"><img style="width: 99px;height: 38px;border: 1px solid;border-radius: 4px;margin: 0 0 0 9px;vertical-align: middle;" ng-src="<!--#echo var="ver1"-->kstk-api/webuser/validateCode?{{r}}" alt="点击刷新验证码"></label></li>
+			<li class="li">
+				<label for="code" class="f_i"><big class="red">*</big>短信验证</label>
 				<input id="code" maxlength="4" minlength="4" type="text" class="txt" ng-model="code" name="code" required placeholder="请输入短信里的验证码">
-				<label class="btn disabled" ng-click="send(user.phone.$modelValue)" ng-class="{'disabled':user.phone.$invalid||sended}" ng-bind="sended?'等待 '+s+' 秒…':'获取短信'"></label></li>
+				<label class="btn disabled" ng-click="send(user.phone.$modelValue)" ng-class="{'disabled':user.phone.$invalid||user.imgcode.$invalid||sended}" ng-bind="sended?'等待 '+s+' 秒…':'获取短信'"></label></li>
 		</ul>
 		<label class="bg_red b_btn"><button type="submit" ng-disabled="user.$invalid">提交</button></label>
 	</form>
