--- a/study/index.html
+++ b/study/index.html
@@ -4,8 +4,7 @@
 <!--#include virtual="/include/head.html"-->
 	<title>课程题库</title>
 </head>
-<body ng-app="baseApp">
-<!--#include virtual="/include/header.html"-->
+<body ng-app="baseApp" style="padding-top: 0">
 <!--#include virtual="/include/banner.html"-->
 <div ng-controller="home" class="ng-init">
 	<div class="panel" ng-if="news">
@@ -105,6 +104,7 @@
 		</div>
 	</div>
 </div>
+<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <script src="<!--#echo var="wc1"-->js/zepto.js" type="text/javascript"></script>
 <!--#include virtual="/include/footer.html"-->
 </body>
