--- a/study/list.html
+++ b/study/list.html
@@ -9,10 +9,10 @@
 <div ng-controller="qlist" class="ng-init">
 	<!--#include virtual="/include/nav.html"-->
 	<ul class="ol_qlist qlist panel" ng-if="rt.type==nlist[0].type&&list.length">
-		<li class="li" ng-repeat="c in list" ng-init="c.p=c.zdnums/c.yznums" ng-class="{'on':c.showL}">
-			<div ng-click="c.showL=!c.showL">
-				<i ng-show="c.sublist.length&&!c.showL" class="i_control_point gray"></i>
-				<i ng-show="c.sublist.length&&c.showL" class="i_remove_point blue"></i>
+		<li class="li" ng-repeat="c in list" ng-init="c.p=(c.zdnums/c.yznums*100).toFixed(2)" ng-class="{'on':c.showL}">
+			<div ng-click="getS(c)">
+				<i ng-show="!c.showL" class="i_control_point gray"></i>
+				<i ng-show="c.showL" class="i_remove_point blue"></i>
 				{{c.chapter_name}} <br>
 				<span class="gray">答题进度：<i class="i_bar"><u ng-class="{'a':c.p>0.84,'b':c.p>0.69,'c':c.p>0.49}" ng-style="{width:c.yznums/c.nums*100+'%'}"></u></i>{{c.yznums||0}}/{{c.nums}}</span>
 				<span class="gray" ng-if="c.yznums">正确率：{{c.p}}%</span>
