--- a/user/fav.html
+++ b/user/fav.html
@@ -9,8 +9,8 @@
 <div ng-controller="fav" class="ng-init">
 	<ul class="qtnlist panel" ng-if="list.length">
 		<li class="li" ng-repeat="s in list">
-			<label class="t" ng-click="show(s)" ng-bind-html="html(s.question.question)"></label>
-			<label ng-click="delStar(s.question)"><i class="i_fav_h"></i></label>
+			<label class="t" ng-click="show(s)" ng-bind-html="html(s.question)"></label>
+			<label ng-click="delStar(s)"><i class="i_fav_h"></i></label>
 		</li>
 	</ul>
 	<!--#include virtual="/include/pagination.html"-->
@@ -31,7 +31,7 @@
 						<span class="green" ng-repeat="a in s.options" ng-if="a.is_real">{{$index | abcd}}</span>
 						<span class="gray fr">统计全平台正确率为 {{pen(s.answer_right,s.answer_num)}}</span>
 					</h3>
-					<div ng-if="s.analysis.analysis" ng-bind-html="html('<span>参考解析：</span>'+s.analysis.analysis)">
+					<div ng-if="s.analysis" ng-bind-html="html('<span>参考解析：</span>'+s.analysis)">
 					</div>
 				</div>
 			</div>
