--- a/plan/list.html
+++ b/plan/list.html
@@ -11,15 +11,15 @@
 	<div ng-if="rt.type==1&&list.length">
 		<ul class="ol_qlist qlist panel" ng-repeat="s in list">
 			<h3 class="h3"><i class="i_video"></i>{{s.name}}</h3>
-			<li class="li" ng-repeat="g in s.jdlist" ng-class="{'on':g.showL}" ng-init="download=g.flist[0].name.indexOf('仅课件')==0">
-				<div ng-click="g.showL=!g.showL">
-					<i ng-show="g.flist.length&&!g.showL" class="i_control_point gray"></i>
-					<i ng-show="g.flist.length&&g.showL" class="i_remove_point blue"></i>
+			<li class="li" ng-repeat="g in s.jdlist" ng-class="{'on':g.showList}" ng-init="download=g.flist[0].name.indexOf('仅课件')==0">
+				<div ng-click="show(g,s.id)">
+					<i ng-show="!g.showList" class="i_control_point gray"></i>
+					<i ng-show="g.showList" class="i_remove_point blue"></i>
 					<b>第 {{$index | xyz}} 阶段：</b>{{download?'仅供下载课件':'观看视频'}}
 				</div>
 				<ol>
 					<hr>
-					<li class="li" ng-repeat="f in g.flist">
+					<li class="li" ng-repeat="f in g.list">
 						<i class="i_circle"></i>
 						<content ng-if="!download">
 						<a ng-href="<!--#echo var="wc1"-->study/item.html?mid={{f.major_id}}&cid={{f.course_id}}&gid={{f.gid}}&vid={{f.id}}"><i class="i_play"></i> {{f.name}}</a><br>
@@ -35,15 +35,15 @@
 	<div ng-if="rt.type==2&&list.length">
 		<ul class="ol_qlist qlist panel" ng-repeat="s in list">
 			<h3 class="h3"><i class="i_qlist"></i>{{s.name}}</h3>
-			<li class="li" ng-repeat="g in s.jdlist" ng-class="{'on':g.showL}">
-				<div ng-click="g.showL=!g.showL">
-					<i ng-if="g.examlist.length&&!g.showL" class="i_control_point gray"></i>
-					<i ng-if="g.examlist.length&&g.showL" class="i_remove_point blue"></i>
+			<li class="li" ng-repeat="g in s.jdlist" ng-class="{'on':g.showList}">
+				<div ng-click="show(g,s.id)">
+					<i ng-if="!g.showList" class="i_control_point gray"></i>
+					<i ng-if="g.showList" class="i_remove_point blue"></i>
 					<b>第 {{$index | xyz}} 阶段：</b>练习试题
 				</div>
-				<ol ng-if="g.examlist.length">
+				<ol>
 					<hr>
-					<a class="li" ng-repeat="e in g.examlist" ng-init="e.p=e.zdnums/e.yznums" ng-href="<!--#echo var="wc1"-->study/test.html?mid={{s.major_id}}&cid={{s.course_id}}&type=grade&sid={{e.id}}&name={{e.title}}">
+					<a class="li" ng-repeat="e in g.list" ng-init="e.p=e.zdnums/e.yznums" ng-href="<!--#echo var="wc1"-->study/test.html?mid={{s.major_id}}&cid={{s.course_id}}&type=grade&sid={{e.id}}&name={{e.title}}">
 						<i class="i_circle"></i>
 						{{e.title}}<br>
 						<span class="gray">答题进度：</span><i class="i_bar"><u ng-class="{'a':e.p>0.84,'b':e.p>0.69,'c':e.p>0.49}" ng-style="{width:e.yznums/e.nums*100+'%'}"></u></i>
