--- a/study/index.html
+++ b/study/index.html
@@ -14,10 +14,11 @@
 		<a href="<!--#echo var="wc1"-->study/list.html?type=ChaptersAndSections"><img src="<!--#echo var="wc1"-->images/t1.png">章节练习</a>
 		<a href="<!--#echo var="wc1"-->study/list.html?type=AllReal"><img src="<!--#echo var="wc1"-->images/t2.png">历年真题</a>
 		<a href="<!--#echo var="wc1"-->study/list.html?type=AllSimul"><img src="<!--#echo var="wc1"-->images/t3.png">模拟考试</a>
-		<a href="<!--#echo var="wc1"-->user/question.html"><img src="<!--#echo var="wc1"-->images/t4.png">错题加练</a>
+		<a href="<!--#echo var="wc1"-->taocan/list.html"><img src="<!--#echo var="wc1"-->images/t4.png">学习套餐</a>
+		<a href="<!--#echo var="wc1"-->user/question.html"><img src="<!--#echo var="wc1"-->images/t5.png">错题加练</a>
 	</div>
 	<div class="panel">
-		<a href="" class="img" style="height: 99px;background-image: url(<!--#echo var="wc1"-->images/ad1.png)"></a>
+		<a href=""><img src="<!--#echo var="wc1"-->images/ad1.jpg" style="display:block;width:100%"></a>
 	</div>
 	<div class="home_p">
 		<div class="hlist dlist panel">
